Added report structure